# Study

gdb/: CMakeLists.txt
gdb/client/: CMakeLists.txt  client  client.cpp
gdb/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
gdb/server/: CMakeLists.txt  main  server  server.cpp
